# OpenSXRaw

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  CORPUS.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml  publish.yml
crates/opensxraw/: Cargo.toml
crates/opensxraw-py/: Cargo.toml
crates/opensxraw-py/src/: lib.rs
crates/opensxraw/src/: lib.rs  reader.rs
crates/opensxraw/src/raw/: calibration.rs  dde.rs  idx.rs  mod.rs  scan.rs  summary_info.rs
crates/opensxraw/tests/: conformance.rs
docs/: docusaurus.config.ts  package.json  sidebars.ts  wrangler.jsonc
docs/docs/: changelog.md  install.md  intro.md  license.md  quickstart.md
docs/docs/format/: legacy-wiff-cfbf.md  legacy-wiff-scan.md  overview.md  wiff2-container.md
docs/docs/guide/: instrument-families.md  mzml-export.md  python-api.md  reader.md  scan-data.md
docs/format/: 01-legacy-wiff-cfbf.md  02-legacy-wiff-scan.md  03-wiff2-container.md  04-legacy-wiff-calibration.md
scripts/: check-release-ready.sh
