[workspace]
resolver = "2"
members = ["crates/opensxraw", "crates/opensxraw-py"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["Nathan Riley <git@nathanriley.com>"]
license = "Apache-2.0"
repository = "https://github.com/Sigilweaver/OpenSXRaw"
homepage = "https://sigilweaver.app/opensxraw/"
documentation = "https://sigilweaver.app/opensxraw/docs/"
keywords = ["mass-spectrometry", "sciex", "wiff", "raw", "proteomics"]
categories = ["parser-implementations", "science"]

[workspace.dependencies]
opensxraw = { path = "crates/opensxraw" }
openmassspec-core = "1.0.0"
pyo3 = { version = "0.29", features = ["extension-module"] }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
